refactoring: entity-and-test-code